@@ -23,8 +23,11 @@ import fi.aalto.cs.apluscourses.ui.courseproject.CourseProjectActionDialogs;
 import fi.aalto.cs.apluscourses.utils.PostponedRunnable;
 import fi.aalto.cs.apluscourses.utils.async.ImmediateTaskManager;
 import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Path;
 import java.util.Collections;
+import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -120,6 +123,13 @@ public class CourseProjectActionTest extends BasePlatformTestCase {
     Project project = getProject();
     when(anActionEvent.getProject()).thenReturn(project);
 
+    URL ideSettingsUrl = null;
+    try {
+      ideSettingsUrl = new URL("https://localhost:23333");
+    } catch (MalformedURLException e) {
+      // this will never happen
+    }
+
     emptyCourse = new ModelExtensions.TestCourse(
         "ID",
         //  name
@@ -134,7 +144,7 @@ public class CourseProjectActionTest extends BasePlatformTestCase {
         //  exerciseModules
         Collections.emptyMap(),
         //  resourceUrls
-        Collections.emptyMap(),
+        Map.of("ideSettings", ideSettingsUrl),
         //  autoInstallComponentNames
         Collections.emptyList(),
         //  replInitialCommands
