@@ -5,7 +5,6 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -36,13 +35,14 @@ public class ExerciseTest {
         10, exercise.getMaxSubmissions());
     assertFalse("The exercise submittability depends on the constructor parameter",
         exercise.isSubmittable());
+    assertFalse("The exercise is In Grading (default value)", exercise.isInGrading());
   }
 
   @NotNull
   @Contract(" -> new")
   private static Points createTestPoints() {
     long exerciseId = 11L;
-    List<Long> submissionIds = Arrays.asList(1L, 2L);
+    List<Long> submissionIds = List.of(1L, 2L);
     Map<Long, List<Long>> submissions = Collections.singletonMap(exerciseId, submissionIds);
     Map<Long, Integer> exercisePoints = Collections.singletonMap(exerciseId, 10);
     Map<Long, Integer> submissionPoints = new HashMap<>();
@@ -90,6 +90,7 @@ public class ExerciseTest {
         99, exercise.getMaxPoints());
     assertEquals("The max submissions is the same as the one in the JSON object",
         5, exercise.getMaxSubmissions());
+    assertFalse("The exercise is In Grading (default value)", exercise.isInGrading());
   }
 
   @Test(expected = JSONException.class)
