@@ -1,8 +1,8 @@
 package fi.aalto.cs.apluscourses.model;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import org.json.JSONArray;
 import org.json.JSONObject;
@@ -17,7 +17,7 @@ public class PointsTest {
     submissionPoints.put(11L, 44);
     submissionPoints.put(22L, 55);
     Points points = new Points(
-        Collections.singletonMap(123L, Arrays.asList(11L, 22L)),
+        Collections.singletonMap(123L, List.of(11L, 22L)),
         Collections.singletonMap(123L, 55),
         submissionPoints
     );
